--- a/src/app/side-menu/navbar/navbar.component.html
+++ b/src/app/side-menu/navbar/navbar.component.html
@@ -1,3 +1,3 @@
 <div class="navbar-items-container">
-    <app-navbar-item *ngFor="let item of navbarItems" [item]="item" [isCollapsed]="isCollapsed"></app-navbar-item>
+    <app-navbar-item *ngFor="let item of navbarItems" [item]="item" [isCollapsed]="isCollapsed" [selected]="isSelected(item)" (itemSelected)="updateSelectedItem($event)"></app-navbar-item>
 </div>
