Add mainContent functionalities

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="app-container">
     <app-side-menu></app-side-menu>
-    <app-main-content style="flex-grow: 2;" (sideMenuCollapsed)="collapseSideMenu()"></app-main-content>
+    <app-main-content style="flex-grow: 2;" (sideMenuCollapsed)="collapseSideMenu()" [pokemon]="pokemon"></app-main-content>
     <app-side-list></app-side-list>
 </div>
