--- a/src/app/main-content/main-content.component.html
+++ b/src/app/main-content/main-content.component.html
@@ -4,3 +4,59 @@
             <i class='bx bx-chevron-left' [ngClass]="{'arrow--right': flipArrow}"></i>
         </button>
     </div>
+    <app-header-details [pokemon]="pokemon"></app-header-details>
+    <div class="cards-container">
+        <app-card [height]="'150px'" [width]="'400px'">
+            <div class="name-card__content">
+                <img [src]="pokemon.sprites.front_default" alt="front image of the pokemon">
+                <span>{{ formatPokemonName() }}</span>
+                <i class="fa-sharp fa-solid fa-circle-play"></i>
+            </div>
+        </app-card>
+        <app-card [height]="'200px'" [width]="'400px'" class="attributes-card">
+            <div class="attributes-card__content">
+                <div class="attributes-card__header">
+                    <span class="card-header-title">INFORMATIONS</span>
+                    <i class="fa-solid fa-ellipsis-vertical dot-icon"></i>
+                </div>
+                <div class="attributes-card__attribute-cell">
+                    <span class="title">LENGHT</span>
+                    <span class="value"><b>{{ pokemon.height }}</b> m</span>
+                </div>
+                <div class="attributes-card__attribute-cell">
+                    <span class="title">AGE</span>
+                    <span class="value"><b>{{ pokemon.height + 13 }}</b> month</span>
+                </div>
+                <div class="attributes-card__bid">
+                    <i class='bx bx-info-square'></i>
+                    <span class="title">Highest Bid</span>
+                    <span class="price">{{ '$' + (pokemon.weight + 20) }}</span>
+                    <span class="legend">You can bid bigger than this number</span>
+                </div>
+                <div class="attributes-card__attribute-cell">
+                    <span class="title">GENDER</span>
+                    <b class="value">Male</b>
+                </div>
+                <div class="attributes-card__attribute-cell">
+                    <span class="title">TIME LEFT</span>
+                    <progress max="10" value="7" class="progress-bar"></progress>
+                    <b class="value value--small">21hr left</b>
+                </div>
+            </div>
+        </app-card>
+        <app-card [height]="'370px'" [width]="'200px'" class="auction-card">
+            <div class="auction-card-content">
+                <div class="auction-card__header">
+                    <div class="title-container">
+                        <span class="card-header-title">AUCTION</span>
+                    </div>
+                    <i class="fa-solid fa-ellipsis-vertical icon dot-icon"></i>
+                </div>
+                <img [src]="pokemon.sprites.back_default" alt="back image of the pokemon">
+                <input type="text" name="currency-field" class="actuion-card__auction-input" value=""
+                    data-type="currency" placeholder="$250.00" maxlength="13" />
+                <button class="shaded-button actuion-card__bid-button">Place Bid</button>
+            </div>
+        </app-card>
+    </div>
+</div>
