--- a/src/app/main-content/main-content.component.css
+++ b/src/app/main-content/main-content.component.css
@@ -33,3 +33,235 @@
 .arrow--right {
     transform: rotate(180deg);
 }
+
+.cards-container {
+    display: grid;
+    grid-template-columns: repeat(2, min-content);
+    grid-template-rows: repeat(2, min-content);
+    padding-left: 30px;
+    gap: 20px;
+}
+
+.name-card__content {
+    display: grid;
+    width: 100%;
+    height: 100%;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: repeat(3, 1fr);
+}
+
+.name-card__content img {
+    width: 150px;
+    height: 150px;
+    grid-row: span 3;
+    justify-self: center;
+}
+
+.name-card__content span {
+    justify-self: end;
+    margin-top: 30px;
+    margin-right: 30px;
+    text-align: right;
+    max-inline-size: 200px;
+    overflow-wrap: break-word;
+    font-size: 16px;
+    color: #253262;
+
+}
+
+.name-card__content i {
+    justify-self: end;
+    margin-right: 30px;
+    margin-top: 20px;
+    padding: 8px;
+    width: fit-content;
+    height: fit-content;
+    font-size: 12px;
+    color: white;
+    background-color: #277dff;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.attributes-card {
+    grid-column: 1;
+    grid-row: 2;
+}
+
+.attributes-card__content {
+    display: grid;
+    height: 100%;
+    width: 100%;
+    justify-items: center;
+    align-items: center;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+}
+
+.attributes-card__header {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    padding-left: 42px;
+    padding-right: 20px;
+    grid-column: span 3;
+}
+
+.card-header-title {
+    font-size: 10px;
+    font-weight: bold;
+    color: #253262;
+}
+
+.dot-icon {
+    color: #e1e1e3;
+    cursor: pointer;
+}
+
+.attributes-card__attribute-cell {
+    display: grid;
+    align-items: center;
+    justify-items: start;
+}
+
+.attributes-card__attribute-cell .title {
+    font-size: 9px;
+    color: #a0a4bc;
+}
+
+.attributes-card__attribute-cell .value {
+    font-size: 18px;
+    color: #253262;
+}
+
+.attributes-card__attribute-cell .value--small {
+    font-size: 8px;
+}
+
+.attributes-card__attribute-cell .progress-bar {
+    width: 80px;
+    height: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    accent-color: #277dff;
+    border-radius: 40px;
+    border: none;
+    background-color: #dce0ed;
+}
+
+.attributes-card__attribute-cell .progress-bar::-webkit-progress-bar {
+    width: 80px;
+    accent-color: #277dff;
+}
+
+.attributes-card__attribute-cell .progress-bar::-webkit-progress-value {
+    width: 80px;
+    accent-color: #277dff;
+}
+
+.attributes-card__attribute-cell .progress-bar::-moz-progress-bar {
+    width: 80px;
+    background-color: #277dff;
+}
+
+.attributes-card__bid {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    gap: 5px;
+    grid-row: span 2;
+}
+
+.attributes-card__bid i {
+    font-size: 26px;
+    color: #277dff;
+}
+
+.attributes-card__bid .title {
+    font-size: 14px;
+    font-weight: bold;
+    color: #253262;
+}
+
+.attributes-card__bid .price {
+    font-size: 14px;
+    font-weight: bold;
+    color: #9ba1b7;
+}
+
+.attributes-card__bid .legend {
+    font-size: 10px;
+    color: #a8adc0;
+    text-align: center;
+    max-inline-size: 100px;
+    overflow-wrap: break-word;
+}
+
+.auction-card-content {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.auction-card {
+    grid-row: span 2;
+}
+
+.auction-card img {
+    width: 200px;
+    height: 200px;
+}
+
+.auction-card__header {
+    display: flex;
+    width: 100%;
+    margin-top: 10px;
+}
+
+.auction-card__header .title-container {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
+
+.auction-card__header .icon {
+    margin-right: 20px;
+}
+
+.actuion-card__auction-input {
+    width: 80%;
+    align-self: center;
+    font-size: 18px;
+    font-weight: bold;
+    text-align: center;
+    color: #7b82a0;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-color: #eeedf2;
+    border-radius: 5px;
+    border: none;
+}
+
+.actuion-card__auction-input:focus {
+    outline: none;
+}
+
+.actuion-card__bid-button {
+    align-self: center;
+    width: 80%;
+    text-align: center;
+}
+
+.shaded-button {
+    color: white;
+    background-color: #277dff;
+    font-size: 12px;
+    font-weight: bold;
+    white-space: nowrap;
+    cursor: pointer;
+    border: none;
+    border-radius: 8px;
+    padding: 12px 18px;
+    box-shadow: 0px 10px 10px -2px rgba(0, 0, 0, .1);
+}
