--- a/src/app/main-content/header-details/header-details.component.html
+++ b/src/app/main-content/header-details/header-details.component.html
@@ -7,7 +7,7 @@
     <div class="pokemon-details__attributes-info">
         <div class="stars">
             <i class='bx bxs-star'></i>
-            <span>{{ pokemon.height }}</span>
+            <span>{{ pokemon ? pokemon.height : ''}}</span>
         </div>
         <button class="shaded-button save-item_button">Save Item</button>
         <span>{{ formatReviews() }}</span>
