--- a/src/app/side-list/side-list.component.css
+++ b/src/app/side-list/side-list.component.css
@@ -31,3 +31,15 @@
     border: none;
     background-color: transparent;
 }
+
+.preview-cards-container {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+    margin-bottom: 20px;
+    gap: 20px;
+    overflow: scroll;
+}
