Add services to get and manage data using observables

--- a/src/app/side-list/preview-card/preview-card.component.css
+++ b/src/app/side-list/preview-card/preview-card.component.css
@@ -1,7 +1,7 @@
 .pokemon-preview-card {
     display: flex;
     flex-direction: column;
-    align-items: start;
+    align-items: flex-start;
     gap: 5px;
     cursor: pointer;
     background-color: white;
