--- a/src/app/side-list/side-list.component.html
+++ b/src/app/side-list/side-list.component.html
@@ -4,6 +4,6 @@
         <button>See All</button>
     </div>
     <div class="preview-cards-container">
-        <app-preview-card *ngFor="let index of previewPokemonIndices" [pokemonId]="index" (click)="onClickPreviewPokemon(index)"></app-preview-card>
+        <app-preview-card *ngFor="let index of previewPokemonIndices" [pokemonId]="index"></app-preview-card>
     </div>
 </div>
