--- a/src/app/side-list/side-list.component.css
+++ b/src/app/side-list/side-list.component.css
@@ -38,7 +38,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: start;
+    justify-content: flex-start;
     margin-bottom: 20px;
     gap: 20px;
     overflow: scroll;
