--- a/src/app/compare-pokemon/compare-pokemon.component.html
+++ b/src/app/compare-pokemon/compare-pokemon.component.html
@@ -1,3 +1,3 @@
 <div class="container">
-    <app-compare *ngFor="let id of pokemonIds" [pokemonId]="id" (onPokemonChanged)="onPokemonChanged($event)"></app-compare>
+    <app-compare *ngFor="let id of pokemonIds; index as i" [pokemonId]="id" [index]="i"></app-compare>
 </div>
