--- a/src/app/side-menu/side-menu.component.css
+++ b/src/app/side-menu/side-menu.component.css
@@ -44,3 +44,9 @@
     align-items: center;
     color: #abb4c2;
 }
+
+.navbar-items-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
