--- a/src/app/side-menu/side-menu.component.html
+++ b/src/app/side-menu/side-menu.component.html
@@ -1,6 +1,6 @@
 <div class="side-menu" [ngClass]="{'side-menu--collapsed': isCollapsed}">
     <div class="side-menu-name">
-        <span class="side-menu-name__label" [ngClass]="{'bx bxs-ghost': isCollapsed}">{{ isCollapsed ? '' : MENU_NAME }}</span>
+        <span class="side-menu-name__label" [ngClass]="{'bx bxs-analyse': isCollapsed}">{{ isCollapsed ? '' : MENU_NAME }}</span>
     </div>
     <hr>
     <div class="navbar">
