--- a/src/app/side-menu/side-menu.component.css
+++ b/src/app/side-menu/side-menu.component.css
@@ -49,4 +49,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    gap: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
