--- a/src/app/create-pokemon/create-pokemon.component.html
+++ b/src/app/create-pokemon/create-pokemon.component.html
@@ -1,44 +1,50 @@
 <div class="container">
-    <form class="form">
+    <form [formGroup]="createPokemonForm" class="form" (ngSubmit)="onSubmit()">
         <div class="form__group">
             <label for="name" class="form__label">Name</label>
-            <input type="text" id="name" class="form__input">
+            <input type="text" id="name" formControlName="name" class="form__input">
         </div>
         <div class="form__group">
             <label for="type" class="form__label">Type</label>
-            <p-dropdown id="type" [options]="types" [(ngModel)]="selectedType" [style]="{'width':'200px'}"></p-dropdown>
+            <p-dropdown id="type" formControlName="type" [options]="types" [style]="{'width':'200px'}"></p-dropdown>
         </div>
         <div class="form__group">
             <label for="height" class="form__label">Height (Decimeters)</label>
-            <input type="number" id="height" min="1" max="9999" class="form__input">
+            <input type="number" id="height" formControlName="height" min="1" max="9999" class="form__input">
         </div>
         <div class="form__group">
             <label for="weight" class="form__label">Weight (Hectograms)</label>
-            <input type="number" id="weight" min="1" max="9999" class="form__input">
+            <input type="number" id="weight" formControlName="weight" min="1" max="9999" class="form__input">
         </div>
         <div class="form__group">
             <label for="experience" class="form__label">Base experience</label>
-            <input type="number" id="experience" min="1" max="9999" class="form__input">
+            <input type="number" id="experience" formControlName="experience" min="1" max="9999" class="form__input">
         </div>
         <div class="form__group multiselect">
-            <label for="ability" class="form__label">Abilities</label>
-            <p-multiSelect [options]="abilities" [(ngModel)]="selectedAbility" optionLabel="name" [filter]="true"
-                filterBy="name" [selectionLimit]="3" [style]="{'min-width':'200px'}">
-            </p-multiSelect>
+            <label for="ability" class="form__label">Ability</label>
+            <p-dropdown id="ability" formControlName="ability" [options]="abilities" optionLabel="name" [filter]="true"
+                filterBy="name" [style]="{'min-width':'200px'}">
+                <ng-template let-ability pTemplate="selectedItem">
+                    <span>{{ getCapitalizedName(ability.name) }}</span>
+                </ng-template>
+                <ng-template let-ability pTemplate="item">
+                    <span>{{ getCapitalizedName(ability.name) }}</span>
+                </ng-template>
+            </p-dropdown>
         </div>
         <div class="form__group form__img">
             <label for="pokemonFrontImage" class="form__label">Front image</label>
             <img [src]="frontImage" alt="front image of the pokemon">
-            <input type="file" id="pokemonFrontImage" (change)="onSelectFrontImage($event)"
+            <input type="file" id="pokemonFrontImage" formControlName="frontImage" (change)="onSelectFrontImage($event)"
                 accept="image/png, image/jpeg">
         </div>
 
         <div class="form__group form__img">
             <label for="pokemonBackImage" class="form__label">Back image</label>
             <img [src]="backImage" alt="back image of the pokemon">
-            <input type="file" id="pokemonBackImage" (change)="onSelectBackImage($event)"
+            <input type="file" id="pokemonBackImage" formControlName="backImage" (change)="onSelectBackImage($event)"
                 accept="image/png, image/jpeg">
         </div>
-        <button type="submit">Create Pokemon</button>
+        <button type="submit" [disabled]="!createPokemonForm.valid">Create Pokemon</button>
     </form>
 </div>
