Add local pokemons in comparison screen

--- a/src/app/compare-pokemon/compare/compare.component.css
+++ b/src/app/compare-pokemon/compare/compare.component.css
@@ -2,6 +2,7 @@
     height: 500px;
     width: 400px;
     display: flex;
+    gap: 5px;
     align-items: center;
     justify-content: center;
     flex-direction: column;
