--- a/src/app/main-content/information-cards/information-cards.component.css
+++ b/src/app/main-content/information-cards/information-cards.component.css
@@ -12,6 +12,7 @@
     height: 100%;
     grid-template-columns: 2fr 1fr;
     grid-template-rows: repeat(3, 1fr);
+    overflow: hidden;
 }
 
 .name-card__content img {
@@ -166,6 +167,7 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+    overflow: hidden;
 }
 
 .auction-card {
