--- a/src/app/side-menu/side-menu.component.html
+++ b/src/app/side-menu/side-menu.component.html
@@ -5,7 +5,7 @@
     <hr>
     <div class="navbar">
         <div class="navbar-items-container">
-            <app-navbar-item *ngFor="let item of navbarItems" [item]="item" [selected]="isSelected(item)" [routerLink]="item.url"></app-navbar-item>
+            <app-navbar-item *ngFor="let item of navbarItems" [item]="item"></app-navbar-item>
         </div>
     </div>
     <hr>
