add tooltip directive that shows pokemon type icon

--- a/src/app/compare-pokemon/compare/compare.component.html
+++ b/src/app/compare-pokemon/compare/compare.component.html
@@ -18,7 +18,7 @@
             </div>
             <div class="information-card__attribute-cell">
                 <span class="title">TYPE</span>
-                <span class="value">{{ pokemon.type | title }}</span>
+                <span class="value" appType>{{ pokemon.type | title }}</span>
             </div>
             <div class="information-card__attribute-cell">
                 <span class="title">HEIGHT</span>
