Add custom validators to the create pokemon form (BMI validator)

--- a/src/app/create-pokemon/create-pokemon.component.css
+++ b/src/app/create-pokemon/create-pokemon.component.css
@@ -18,6 +18,12 @@
     gap: 5px;
 }
 
+.form__group-bmi {
+    grid-column: span 2;
+    display: flex;
+    gap: 30px;
+}
+
 .form__input {
     padding: 10px 10px;
     width: 200px;
